syntax = "proto3";
option go_package = "github.com/yxlimo/go-jsonrpc-gateway/test/proto";
package jsonrpc.gateway.test.proto.everything;

import "google/protobuf/field_mask.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/wrappers.proto";
import "test/proto/sub/message.proto";
import "test/proto/sub2/message.proto";
import "test/proto/pathenum/path_enum.proto";
import "google/protobuf/timestamp.proto";

message ErrorResponse{
  string correlationId = 1;
  ErrorObject error = 2;
}

message ErrorObject{
  int32 code = 1;
  string message = 2;
}


// Intentionally complicated message type to cover many features of Protobuf.
message ABitOfEverything {
  // Nested is nested type.
  message Nested {
    // name is nested field.
    string name = 1;
    uint32 amount = 2;
    // DeepEnum is one or zero.
    enum DeepEnum {
      // FALSE is false.
      FALSE = 0;
      // TRUE is true.
      TRUE = 1;
    }

    // DeepEnum comment.
    DeepEnum ok = 3;
  }
  Nested single_nested = 25;

  string uuid = 1;
  repeated Nested nested = 2;
  float float_value = 3;
  double double_value = 4;
  int64 int64_value = 5;
  uint64 uint64_value = 6;
  int32 int32_value = 7;
  fixed64 fixed64_value = 8;
  fixed32 fixed32_value = 9;
  bool bool_value = 10;
  string string_value = 11;
  bytes bytes_value = 29;
  uint32 uint32_value = 13;
  NumericEnum enum_value = 14;
  pathenum.PathEnum path_enum_value = 30;
  pathenum.MessagePathEnum.NestedPathEnum nested_path_enum_value = 31;
  sfixed32 sfixed32_value = 15;
  sfixed64 sfixed64_value = 16;
  sint32 sint32_value = 17;
  sint64 sint64_value = 18;
  repeated string repeated_string_value = 19;
  oneof oneof_value {
    google.protobuf.Empty oneof_empty = 20;
    string oneof_string = 21;
  }

  map<string, NumericEnum> map_value = 22;
  map<string, string> mapped_string_value = 23;
  map<string, Nested> mapped_nested_value = 24;

  string nonConventionalNameValue = 26;

  google.protobuf.Timestamp timestamp_value = 27;

  // repeated enum value. it is comma-separated in query
  repeated NumericEnum repeated_enum_value = 28;

  // repeated numeric enum comment (This comment is overridden by the field annotation)
  repeated NumericEnum repeated_enum_annotation = 32;

  // numeric enum comment (This comment is overridden by the field annotation)
  NumericEnum enum_value_annotation = 33;

  // repeated string comment (This comment is overridden by the field annotation)
  repeated string repeated_string_annotation = 34;

  // repeated nested object comment (This comment is overridden by the field annotation)
  repeated Nested repeated_nested_annotation = 35;

  // nested object comments (This comment is overridden by the field annotation)
  Nested nested_annotation = 36;

  int64 int64_override_type = 37;

  // mark a field as required in Open API definition
  string required_string_via_field_behavior_annotation = 38;

  // mark a field as readonly in Open API definition
  string output_only_string_via_field_behavior_annotation = 39;

  optional string optional_string_value = 40;
}

// ABitOfEverythingRepeated is used to validate repeated path parameter functionality
message ABitOfEverythingRepeated {

  // repeated values. they are comma-separated in path
  repeated float path_repeated_float_value = 1;
  repeated double path_repeated_double_value = 2;
  repeated int64 path_repeated_int64_value = 3;
  repeated uint64 path_repeated_uint64_value = 4;
  repeated int32 path_repeated_int32_value = 5;
  repeated fixed64 path_repeated_fixed64_value = 6;
  repeated fixed32 path_repeated_fixed32_value = 7;
  repeated bool path_repeated_bool_value = 8;
  repeated string path_repeated_string_value = 9;
  repeated bytes path_repeated_bytes_value = 10;
  repeated uint32 path_repeated_uint32_value = 11;
  repeated NumericEnum path_repeated_enum_value = 12;
  repeated sfixed32 path_repeated_sfixed32_value = 13;
  repeated sfixed64 path_repeated_sfixed64_value = 14;
  repeated sint32 path_repeated_sint32_value = 15;
  repeated sint64 path_repeated_sint64_value = 16;
}

message Body {
  string name = 1;
}

message MessageWithBody {
  string id = 1;
  Body data = 2;
}


// NumericEnum is one or zero.
enum NumericEnum {
  // ZERO means 0
  ZERO = 0;
  // ONE means 1
  ONE = 1;
}

// UpdateV2Request request for update includes the message and the update mask
message UpdateV2Request {
  ABitOfEverything abe = 1;
  // The paths to update.
  google.protobuf.FieldMask update_mask = 2;
}

// An example resource type from AIP-123 used to test the behavior described in
// the CreateBookRequest message.
//
// See: https://google.aip.dev/123
message Book {
  // The resource name of the book.
  //
  // Format: `publishers/{publisher}/books/{book}`
  //
  // Example: `publishers/1257894000000000000/books/my-book`
  string name = 1;

  // Output only. The book's ID.
  string id = 2;

  // Output only. Creation time of the book.
  google.protobuf.Timestamp create_time = 3;
}

// A standard Create message from AIP-133 with a user-specified ID.
// The user-specified ID (the `book_id` field in this example) must become a
// query parameter in the OpenAPI spec.
//
// See: https://google.aip.dev/133#user-specified-ids
message CreateBookRequest {
  // The publisher in which to create the book.
  //
  // Format: `publishers/{publisher}`
  //
  // Example: `publishers/1257894000000000000`
  string parent = 1;

  // The book to create.
  Book book = 2;

  // The ID to use for the book.
  //
  // This must start with an alphanumeric character.
  string book_id = 3;
}

// A standard Update message from AIP-134
//
// See: https://google.aip.dev/134#request-message
message UpdateBookRequest {
  // The book to update.
  //
  // The book's `name` field is used to identify the book to be updated.
  // Format: publishers/{publisher}/books/{book}
  Book book = 1;

  // The list of fields to be updated.
  google.protobuf.FieldMask update_mask = 2;

  // If set to true, and the book is not found, a new book will be created.
  // In this situation, `update_mask` is ignored.
  bool allow_missing = 3;

}

// ABitOfEverything service is used to validate that APIs with complicated
// proto messages and URL templates are still processed correctly.
service ABitOfEverythingService {
  // Create a new ABitOfEverything
  //
  // This API creates a new ABitOfEverything
  rpc Create(ABitOfEverything) returns (ABitOfEverything) {}
  rpc CreateBody(ABitOfEverything) returns (ABitOfEverything) {}
  // Create a book.
  rpc CreateBook(CreateBookRequest) returns (Book) {}
  rpc UpdateBook(UpdateBookRequest) returns (Book) {}
  rpc Lookup(sub2.IdMessage) returns (ABitOfEverything) {}
  rpc Update(ABitOfEverything) returns (google.protobuf.Empty) {}
  rpc UpdateV2(UpdateV2Request) returns (google.protobuf.Empty) {}

  rpc Delete(sub2.IdMessage) returns (google.protobuf.Empty) {}
  rpc GetQuery(ABitOfEverything) returns (google.protobuf.Empty) {}
  rpc GetRepeatedQuery(ABitOfEverythingRepeated) returns (ABitOfEverythingRepeated) {}
  // Echo allows posting a StringMessage value.
  //
  // It also exposes multiple bindings.
  //
  // This makes it useful when validating that the OpenAPI v2 API
  // description exposes documentation correctly on all paths
  // defined as additional_bindings in the proto.
  rpc Echo(jsonrpc.gateway.test.proto.sub.StringMessage) returns (jsonrpc.gateway.test.proto.sub.StringMessage) {}
  rpc DeepPathEcho(ABitOfEverything) returns (ABitOfEverything) {}
  rpc NoBindings(google.protobuf.Duration) returns (google.protobuf.Empty) {}
  rpc Timeout(google.protobuf.Empty) returns (google.protobuf.Empty) {}
  rpc ErrorWithDetails(google.protobuf.Empty) returns (google.protobuf.Empty) {}
  rpc GetMessageWithBody(MessageWithBody) returns (google.protobuf.Empty) {}
  rpc PostWithEmptyBody(Body) returns (google.protobuf.Empty) {}
  rpc CheckGetQueryParams(ABitOfEverything) returns (ABitOfEverything) {}
  rpc CheckNestedEnumGetQueryParams(ABitOfEverything) returns (ABitOfEverything) {}
  rpc CheckPostQueryParams(ABitOfEverything) returns (ABitOfEverything) {}
  rpc OverwriteResponseContentType(google.protobuf.Empty) returns (google.protobuf.StringValue) {}
  rpc CheckExternalPathEnum(pathenum.MessageWithPathEnum) returns (google.protobuf.Empty) {}
  rpc CheckExternalNestedPathEnum(pathenum.MessageWithNestedPathEnum) returns (google.protobuf.Empty) {}
}

// camelCase and lowercase service names are valid but not recommended (use TitleCase instead)
service camelCaseServiceName {
  rpc Empty(google.protobuf.Empty) returns (google.protobuf.Empty) {}
}
service AnotherServiceWithNoBindings {
  rpc NoBindings(google.protobuf.Empty) returns (google.protobuf.Empty) {}
}
